cmake_minimum_required(VERSION 3.0.2)
project(project_ws)

## Compile as C++11, supported in ROS Kinetic and newer
# add_compile_options(-std=c++11)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  diff_drive_controller
  controller_manager
  cv_bridge 
  image_transport 
)

find_package(OpenCV REQUIRED)

catkin_package()

include_directories(
  ${catkin_INCLUDE_DIRS}
  ${OpenCV_INCLUDE_DIRS}
)

catkin_install_python(PROGRAMS src/controle_robo.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
